--- a/public_html/decide/styles/specific/field.css
+++ b/public_html/decide/styles/specific/field.css
@@ -8,3 +8,6 @@ Part of the rarh.io project.
 
 
 /* When the X button is in the reject list */
+.field {
+    height: 30px;
+}
