--- a/public_html/decide/styles/specific/list.css
+++ b/public_html/decide/styles/specific/list.css
@@ -1,18 +1,33 @@
 /**
 list.css
-This stylesheet specifies the styling for the each list.
+This stylesheet specifies the styling for the each individual list.
 @author Robert Hardy
 @since 2018-07-11
 Part of the rarh.io project.
  */
 .list {
-    min-width: 300px;
+    width: 275px;
+    min-width: 275px;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    margin: 15px 15px 15px 15px;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12)
 }
 
 .list-title-box {
-    /*float: top;*/
 }
 
 .list-title-box p {
     font-size: large;
+}
+
+.fields-container {
+}
+
+.action-box {
+}
+
+.list-flex-spacer {
+    flex-grow: 1;
 }
